# CEIA_mlops_1

./: .dockerignore  .gitignore  README.md  debug_connection.py  docker-compose.yml  notebook_code.py  openapi.json  pyproject.toml  requirements.txt
airflow/: Dockerfile  requirements.txt
airflow/dags/: data_treatment_dag.py  train_pipeline_dag.py
airflow/secrets/: simple_auth_manager_passwords.json
api/: Dockerfile  main.py  preprocessing.py  requirements.txt
docs/: api.md  architecture.md  enunciado.md  frontend.md  instalacion-entorno.md  pipelines.md  resolucion.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css
mlflow/: Dockerfile  requirements.txt
