[project]
name = "mlops-tp-final"
version = "0.1.0"
description = "Pipeline MLOps: Airflow + MLflow + MinIO + FastAPI + modelo entrenado"
authors = [
    { name = "Ferrari Maira", email = "mferrari@gmail.com" },
    { name = "Pardo Sebastian", email = "equipo@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "joblib>=1.4.0",
    "mlflow>=2.12.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "minio>=7.2.7",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.1",
    "pendulum>=3.1.0",
    "psycopg2-binary>=2.9.11",
    "cryptography>=46.0.3",
    "pymysql>=1.1.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "s3fs>=2025.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
